# crypto_dca

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  daily.yml  migrate.yml
migrations/: 20250117184813_initial_schema.down.sql  20250117184813_initial_schema.up.sql
src/: __init__.py  binance_client.py  cli.py  dca_executor.py  main.py  utils.py
src/domain/: models.py
src/infrastructure/: repositories.py  test_repositories.py
