[project]
name = "crypto-dca"
version = "0.1.0"
description = "Automated Binance Spot DCA bot for scheduled limit buy orders"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
crypto-dca = "src.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]
