[project]
name = "crypto-dca"
version = "0.1.0"
description = "Automated Binance Spot DCA bot for scheduled limit buy orders"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
]

[project.scripts]
crypto-dca = "src.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]
test = [
    "pytest>=8.0.0",
    "testcontainers[postgres]>=4.0.0",
]
